@@ -25,27 +25,33 @@ import org.springframework.ui.context.ThemeSource;
  * Interface to provide configuration for a web application. This is read-only while
  * the application is running, but may be reloaded if the implementation supports this.
  *
- * <p>This interface adds ServletContext methods to the generic ApplicationContext
+ * <p>This interface adds a getServletContext method to the generic ApplicationContext
  * interface, and defines a well-known application attribute name that the root
  * context must be bound to in the bootstrap process.
- *
- * <p>In addition to standard application context lifecycle capabilities,
- * WebApplicationContext implementations need to detect ServletContextAware
- * beans and invoke the setServletContext accordingly.
  *
  * <p>Like generic application contexts, web application contexts are hierarchical.
  * There is a single root context per application, while each servlet in the application
  * (including a dispatcher servlet in the MVC framework) has its own child context.
  *
+ * <p>In addition to standard application context lifecycle capabilities,
+ * WebApplicationContext implementations need to detect ServletContextAware
+ * beans and invoke the setServletContext method accordingly.
+ *
  * @author Rod Johnson
+ * @author Juergen Hoeller
  * @since January 19, 2001
  * @version $Revision$
- * @see ServletContextAware
+ * @see ServletContextAware#setServletContext
  */
 public interface WebApplicationContext extends ApplicationContext, ThemeSource {
 
 	/**
 	 * Context attribute to bind root WebApplicationContext to on successful startup.
+	 * <p>Note: If the startup of the root context fails, this attribute can contain
+	 * an exception or error as value. Use WebApplicationContextUtils for convenient
+	 * lookup of the root WebApplicationContext.
+	 * @see org.springframework.web.context.support.WebApplicationContextUtils#getWebApplicationContext
+	 * @see org.springframework.web.context.support.WebApplicationContextUtils#getRequiredWebApplicationContext
 	 */
 	String ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE = WebApplicationContext.class + ".ROOT";
 
